--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Всем привет!</h2>
-					<p>Я — QA-инженер с опытом работы в сфере QA более 3-х лет. Имею опыт написания, рефакторинга и применения тестовой документации. Тестировала web-сайты и мобильные приложения с использованием различных техник тест-дизайна. Умею тестировать front-end, backend, микросервисную архитектуру с применением необходимых инструментов</p>
+					<p>Я — QA-инженер с опытом работы в сфере QA более 3-х лет. Имею опыт написания, рефакторинга и применения тестовой документации. Тестировал web-сайты и мобильные приложения с использованием различных техник тест-дизайна. Умею тестировать front-end, backend, микросервисную архитектуру с применением необходимых инструментов</p>
 					
 					<p>
 						<ul class="fh5co-social-icons">
