--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Инженер по техническому обсулживанию авиационной техники</h3>
+									<h3 class="timeline-title">Инженер по техническому обслуживанию авиационной техники</h3>
 									<span class="company">Аэрофлот</span>
 								</div>
 								<div class="timeline-body">
@@ -358,7 +358,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Git</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Вносил  изменения в основную ветку мастера через создание своей собственной ветки</p>
 							</div>
 						</div>
 
