--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Middle QA Engineer</h3>
-									<span class="company">Компания из легенды - 2022-2024</span>
+									<span class="company">SM Lab - 2022-2024</span>
 								</div>
 								<div class="timeline-body">
 									<p>Обработка спецификаций и требований;
@@ -128,7 +128,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Junior QA Engineer</h3>
-									<span class="company">Компания из легенды - 2021-2022</span>
+									<span class="company">Аэрофлот - 2021-2022</span>
 								</div>
 								<div class="timeline-body">
 									<p>Написание тестовой документации и работа с ней;
@@ -145,7 +145,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Инженер по техническому обслуживанию авиационной техники</h3>
-									<span class="company">Аэрофлот</span>
+									<span class="company">Аэрофлот - 2017-2021</span>
 								</div>
 								<div class="timeline-body">
 									<p>Оперативное техническое обслуживание воздушных судов, анализ причин дефектов и неисправностей, принятие мер по их предупреждению и устранению, оформление производственно-технической документации, обеспечение выполнения суточного плана полётов</p>
